--- a/media/css/typography.css
+++ b/media/css/typography.css
@@ -162,7 +162,7 @@ a.related-lookup:hover, a.related-lookup:active {
     background-image: url('../img/icons/icon-related_lookup-hover.png');
 }
 a.related-lookup + strong {
-    position: relative; top: 1px; left: -6px;
+    position: relative; top: 1px; left: 3px;
     color: #555; font-size: 11px; font-weight: bold;
 }
 #changelist .result-list a.related-lookup {
